--- a/index.html
+++ b/index.html
@@ -32,11 +32,26 @@
         </div>  
         <div class="menu-container menu-container-sd">
             <ul class="menu-bar">
-                <li class="menu-item"><a href="#home" class="item-link">HOME</a></li>
-                <li class="menu-item"><a href="#home" class="item-link">SERVICES</a></li>
-                <li class="menu-item"><a href="#home" class="item-link">REGISTRATION</a></li>
-                <li class="menu-item"><a href="#home" class="item-link">LOGIN</a></li>
-                <li class="menu-item"><a href="#home" class="item-link">CONTACT</a></li>
+                <div class="menu-item-rack">
+                    <i class="fas fa-home"></i>
+                    <li class="menu-item"><a href="#home" class="item-link">HOME</a></li>
+                </div>
+                <div class="menu-item-rack">
+                    <i class="fas fa-tools"></i>
+                    <li class="menu-item"><a href="#home" class="item-link">SERVICES</a></li>
+                </div>
+                <div class="menu-item-rack">
+                    <i class="fas fa-user"></i>
+                    <li class="menu-item"><a href="#home" class="item-link">REGISTRATION</a></li>
+                </div>
+                <div class="menu-item-rack">
+                    <i class="fa fa-sign-in"></i>
+                    <li class="menu-item"><a href="#home" class="item-link">LOGIN</a></li>
+                </div>
+                <div class="menu-item-rack">
+                    <i class="fa fa-envelope"></i>
+                    <li class="menu-item"><a href="#home" class="item-link">CONTACT</a></li>
+                </div> 
             </ul>
         </div>
     </nav> <!-- End of Navigation Bar -->
