--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             </div>
         </div> 
     </div>
-    <!-- <div class="test"></div> -->
+
   
     
 
     <script src="js/toggle-menu-script.js"></script>
-    <!-- <script src="js/bannar-img-change.js"></script> -->
+    <script src="js/bannar-img-change.js"></script>
 </body>
 </html>
