--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
     
 
     <script src="js/toggle-menu-script.js"></script>
-    <script src="js/bannar-img-change.js"></script>
+    <!-- <script src="js/bannar-img-change.js"></script> -->
 </body>
 </html>
