--- a/index.html
+++ b/index.html
@@ -95,16 +95,149 @@
                 <p>Customer's Satisfaction is Our Only Aim</p>
             </div>   
             <div class="btn">
-                <button type="button">Signup</button>
-                <button type="button">Login</button>
+                <button type="button">Sign Up</button>
+                <button type="button">Log In</button>
             </div>
         </div> 
-    </div>
+    </div> <!-- Ends of Bannar-->
+    <!-- Our Service Start -->
+    <div class="services">
+        <div class="para-container">
+            <div class="para-rack">
+                <h2>OUR SERVICES</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque blanditiis laudantium architecto nemo non ullam modi laborum aut rerum reprehenderit adipisci, excepturi, maxime labore sequi officia repellat exercitationem quibusdam minus.
+                Praesentium deserunt architecto veritatis placeat amet doloribus vitae, possimus doloremque quis alias nemo error sunt ut neque, quae deleniti eos. Autem ad dolore tempore sed amet fuga exercitationem quis eligendi?
+                Atque, fugiat. Aperiam neque, quis qui pariatur nostrum consectetur et doloremque mollitia quisquam molestiae quas sunt, suscipit odio modi, unde illo aliquam. Dolore nobis vel beatae quas praesentium quis harum.</p>
+            </div>
+        </div>
+        <div class="services-icon-container">
+            <div class="services-icons">
+                <i class="fa fa-television fa-8x" aria-hidden="true"></i>
+                <p>Electronic Appliances</p>
+            </div>
+            <div class="services-icons">
+                <i class="fas fa-tools fa-8x" aria-hidden="true"></i>
+                <p>Preventive Maintenance</p>
+            </div>
+            <div class="services-icons">
+                <i class="fa fa-gears fa-8x" aria-hidden="true"></i>
+                <p>Fault Repair</p>
+            </div>
+        </div>
+    </div> <!-- Our Service End -->
+    <!-- Account Start -->
+    <div class="account">
+        <h2>Create an Account</h2>
+        <div class="form-container">
+            <form action="">
+                <div class="label-rack">
+                    <i class="fas fa-user"></i>
+                    <label for="">Name</label>
+                </div>
+                <input type="text" placeholder="name">
+                <div class="label-rack">
+                    <i class="fas fa-envelope"></i>
+                    <label for="">E-mail</label>
+                </div>
+                <input type="email" placeholder="Enter an valid E-mail">
+                <p>We are committed not to share your email info.</p>
+                <div class="label-rack">
+                    <i class="fas fa-key"></i>
+                    <label for="">Password</label>
+                </div>
+                <input type="password" placeholder="Choose a suitable password">
+                <button>Sign Up</button>
+                <p>Notice: By signing up to our service, you are agreed to our terms, data policy and coockie policy</p>
+            </form>
+        </div>
+    </div> <!-- Account End -->
 
-  
+    <!-- Customer's Review Start -->
+    <div class="customer-container">
+        <h2>Our Valuable Customer's Review</h2>
+        <div class="customer-sub-container">
+            <div class="card">
+                <div class="card-image-rack">
+                    <img src="images/customer-1.jpg" alt="">
+                </div>
+                <div class="title-rack">
+                    <h4>Sonam Kapoor</h4>
+                    <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptate vero aliquam neque ullam temporibus aliquid.</small>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image-rack">
+                    <img src="images/customer-2.jpg" alt="">
+                </div>
+                <div class="title-rack">
+                    <h4>Sonam Kapoor</h4>
+                    <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptate vero aliquam neque ullam temporibus aliquid.</small>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image-rack">
+                    <img src="images/customer-3.jpg" alt="">
+                </div>
+                <div class="title-rack">
+                    <h4>Sonam Kapoor</h4>
+                    <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptate vero aliquam neque ullam temporibus aliquid.</small>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image-rack">
+                    <img src="images/customer-4.jpg" alt="">
+                </div>
+                <div class="title-rack">
+                    <h4>Sonam Kapoor</h4>
+                    <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptate vero aliquam neque ullam temporibus aliquid.</small>
+                </div>
+            </div>
+        </div>
+    </div> <!-- Customer's Review End -->
+    <!-- Contact Section Start -->
+    <div class="contact-section">
+        <h2>Contact Us</h2>
+        <div class="contact-container">
+            <div class="contact-form">
+                <form action="">
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Subject/ Issue">
+                    <input type="email" placeholder="E-mail">
+                    <textarea rows="4" cols="50" placeholder="Please describe, how we can help you..."></textarea>
+                    <button>Send</button>
+                </form>
+            </div>
+            <div class="contact-address">
+                <div class="hq">
+                    <h3>Head Quarter</h3>
+                    <p>Heaven Service Ptv. Ltd.</p>
+                    <p>Latifpur, Koloni, Bogra</p>
+                </div>
+                <div class="branch">
+                    <h3>Branch Office</h3>
+                    <p>Heaven Service Ptv. Ltd.</p>
+                    <p>Koigari, Gohail Road, Bogra</p>
+                </div>
+            </div>
+        </div>
+    </div> <!-- Contact Section End-->
+
+    <!-- Footer Start -->
+    <footer>
+        <p>Follow Us</p>
+        <div class="col-item col-item-icon">
+            <div class="social-icon">
+                <span class="f"><i class="fab fa-facebook-f"></i></span>
+                <span class="t"><i class="fab fa-twitter"></i></span>
+                <span class="l"><i class="fab fa-linkedin"></i></span>
+                <span class="p"><i class="fab fa-pinterest"></i></span>
+            </div>
+        </div>
+    </footer> <!-- Footer End -->
     
 
     <script src="js/toggle-menu-script.js"></script>
-    <!-- <script src="js/bannar-img-change.js"></script> -->
+    <script src="js/bannar-img-change.js"></script>
+    <script src="learning.js"></script>
 </body>
 </html>
