--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 </div>
                 <div class="menu-item-rack">
                     <i class="fas fa-tools"></i>
-                    <li class="menu-item"><a href="#home" class="item-link">SERVICES</a></li>
+                    <li class="menu-item"><a href="#services" class="item-link">SERVICES</a></li>
                 </div>
                 <div class="menu-item-rack">
                     <i class="fas fa-user"></i>
-                    <li class="menu-item"><a href="#home" class="item-link">REGISTRATION</a></li>
+                    <li class="menu-item"><a href="#registration" class="item-link">REGISTRATION</a></li>
                 </div>
                 <div class="menu-item-rack">
                     <i class="fa fa-sign-in"></i>
@@ -50,13 +50,13 @@
                 </div>
                 <div class="menu-item-rack">
                     <i class="fa fa-envelope"></i>
-                    <li class="menu-item"><a href="#home" class="item-link">CONTACT</a></li>
+                    <li class="menu-item"><a href="#contact" class="item-link">CONTACT</a></li>
                 </div> 
             </ul>
         </div>
     </nav> <!-- End of Navigation Bar -->
     <!-- Start Bannar -->
-    <div class="bannar-container">
+    <div class="bannar-container" id="home">
         <div class="bannar-section">
             <div class="image-rack active">
                 <img src="images/bannar-image-1.1.jpg" alt="">        
@@ -101,7 +101,7 @@
         </div> 
     </div> <!-- Ends of Bannar-->
     <!-- Our Service Start -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="para-container">
             <div class="para-rack">
                 <h2>OUR SERVICES</h2>
@@ -126,7 +126,7 @@
         </div>
     </div> <!-- Our Service End -->
     <!-- Account Start -->
-    <div class="account">
+    <div class="account" id="registration">
         <h2>Create an Account</h2>
         <div class="form-container">
             <form action="">
@@ -195,7 +195,7 @@
         </div>
     </div> <!-- Customer's Review End -->
     <!-- Contact Section Start -->
-    <div class="contact-section">
+    <div class="contact-section" id="contact">
         <h2>Contact Us</h2>
         <div class="contact-container">
             <div class="contact-form">
